// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repository table row component renders a symlink table row 1`] = `
<tr
  class="tree-item"
>
  <td
    class="tree-item-file-name cursor-default position-relative"
  >
    <a
      class="tree-item-link str-truncated"
      data-qa-selector="file_name_link"
      href="https://test.com"
      title="test"
    >
      <file-icon-stub
        class="mr-1 position-relative text-secondary"
        cssclasses="position-relative file-icon"
        filemode="120000"
        filename="test"
        size="16"
      />
      <span
        class="position-relative"
      >
        test
      </span>
    </a>
     
    <!---->
     
    <!---->
     
    <gl-icon-stub
      class="ml-1"
      name="lock"
      size="12"
      title="Locked by Root"
    />
  </td>
   
  <td
    class="d-none d-sm-table-cell tree-commit cursor-default gl-text-secondary"
  >
    <gl-link-stub
      class="str-truncated-100 tree-commit-link gl-text-secondary"
    />
     
    <gl-intersection-observer-stub>
      <!---->
    </gl-intersection-observer-stub>
  </td>
   
  <td
    class="tree-time-ago text-right cursor-default gl-text-secondary"
  >
    <timeago-tooltip-stub
      cssclass=""
      datetimeformat="DATE_WITH_TIME_FORMAT"
      time="2019-01-01"
      tooltipplacement="top"
    />
     
    <!---->
  </td>
</tr>
`;

exports[`Repository table row component renders table row 1`] = `
<tr
  class="tree-item"
>
  <td
    class="tree-item-file-name cursor-default position-relative"
  >
    <a
      class="tree-item-link str-truncated"
      data-qa-selector="file_name_link"
      href="https://test.com"
      title="test"
    >
      <file-icon-stub
        class="mr-1 position-relative text-secondary"
        cssclasses="position-relative file-icon"
        filemode=""
        filename="test"
        size="16"
      />
      <span
        class="position-relative"
      >
        test
      </span>
    </a>
     
    <!---->
     
    <!---->
     
    <gl-icon-stub
      class="ml-1"
      name="lock"
      size="12"
      title="Locked by Root"
    />
  </td>
   
  <td
    class="d-none d-sm-table-cell tree-commit cursor-default gl-text-secondary"
  >
    <gl-link-stub
      class="str-truncated-100 tree-commit-link gl-text-secondary"
    />
     
    <gl-intersection-observer-stub>
      <!---->
    </gl-intersection-observer-stub>
  </td>
   
  <td
    class="tree-time-ago text-right cursor-default gl-text-secondary"
  >
    <timeago-tooltip-stub
      cssclass=""
      datetimeformat="DATE_WITH_TIME_FORMAT"
      time="2019-01-01"
      tooltipplacement="top"
    />
     
    <!---->
  </td>
</tr>
`;

exports[`Repository table row component renders table row for path with special character 1`] = `
<tr
  class="tree-item"
>
  <td
    class="tree-item-file-name cursor-default position-relative"
  >
    <a
      class="tree-item-link str-truncated"
      data-qa-selector="file_name_link"
      href="https://test.com"
      title="test"
    >
      <file-icon-stub
        class="mr-1 position-relative text-secondary"
        cssclasses="position-relative file-icon"
        filemode=""
        filename="test"
        size="16"
      />
      <span
        class="position-relative"
      >
        test
      </span>
    </a>
     
    <!---->
     
    <!---->
     
    <gl-icon-stub
      class="ml-1"
      name="lock"
      size="12"
      title="Locked by Root"
    />
  </td>
   
  <td
    class="d-none d-sm-table-cell tree-commit cursor-default gl-text-secondary"
  >
    <gl-link-stub
      class="str-truncated-100 tree-commit-link gl-text-secondary"
    />
     
    <gl-intersection-observer-stub>
      <!---->
    </gl-intersection-observer-stub>
  </td>
   
  <td
    class="tree-time-ago text-right cursor-default gl-text-secondary"
  >
    <timeago-tooltip-stub
      cssclass=""
      datetimeformat="DATE_WITH_TIME_FORMAT"
      time="2019-01-01"
      tooltipplacement="top"
    />
     
    <!---->
  </td>
</tr>
`;
